--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Wristband AR - Stable View</title>
+    <title>Wristband WebAR</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
     
     <style>
       body { margin: 0; overflow: hidden; }
-      /* Force the camera to fill the mobile screen correctly */
+      /* Fixes the white space/camera sizing issue seen in your photos */
       .a-canvas { width: 100% !important; height: 100% !important; }
       
-      #instruction-overlay {
-        position: absolute; bottom: 10%; left: 50%; transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.7); color: white; padding: 12px 24px;
-        border-radius: 50px; font-family: sans-serif; font-size: 16px;
-        z-index: 10; pointer-events: none; border: 1px solid white;
+      #example-scanning-overlay {
+        display: flex; align-items: center; justify-content: center;
+        position: absolute; left: 0; right: 0; top: 0; bottom: 0;
+        background: rgba(0, 0, 0, 0.5); color: white; z-index: 2;
+        font-family: sans-serif;
       }
+      #example-scanning-overlay.hidden { display: none; }
     </style>
   </head>
 
   <body>
-    <div id="instruction-overlay">
-      Point at the flyer to see the wristband..!
+    <div id="example-scanning-overlay">
+      <p>Scan the flyer to see the wristband...!</p>
     </div>
 
     <a-scene 
-      /* STABILITY: filterMinCF and filterBeta stop the 'shaking' by smoothing tracking data */
-      mindar-image="imageTargetSrc: ./targets.mind; filterMinCF:0.0001; filterBeta: 0.001; uiScanning: no;" 
-      embedded
+      /* STABILITY FIX: filterMinCF and filterBeta stop the 'shaking' */
+      mindar-image="imageTargetSrc: ./targets.mind; filterMinCF:0.0001; filterBeta: 0.001; uiScanning: #example-scanning-overlay;" 
       color-space="sRGB" 
       renderer="colorManagement: true, physicallyCorrectLights" 
       vr-mode-ui="enabled: false" 
@@ -43,8 +43,11 @@
       <a-entity mindar-image-target="targetIndex: 0">
         <a-gltf-model 
           src="#wristbandModel" 
-          scale="0.06 0.06 0.06"
-          position="0 0 0.1"
+          /* SCALE: Reduced to 0.06 to fit the screen better */
+          scale="0.06 0.06 0.06" 
+          /* POSITION: 0.1 keeps it close to the paper for better tracking */
+          position="0 0 0.1" 
+          /* ROTATION: 90 180 0 faces the logo/QR toward the camera */
           rotation="90 180 0">
         </a-gltf-model>
       </a-entity>
