Fix model file extension for wristband_alt
Updated the second model's source from 'wristband_alt.glb' to 'wristband_alt.gltf'.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       
       <a-assets>
         <a-asset-item id="model1" src="./wristband.glb"></a-asset-item>
-        <a-asset-item id="model2" src="./wristband_alt.glb"></a-asset-item>
+        <a-asset-item id="model2" src="./wristband_alt.gltf"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -86,4 +86,5 @@
     </script>
   </body>
 </html>
+
 
