--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <body>
     <div id="example-scanning-overlay">
-      <p>Scan either flyer...!</p>
+      <p>Scan the flyer...!</p>
     </div>
 
     <div id="ui-container">
@@ -60,7 +60,7 @@
 
       <a-entity mindar-image-target="targetIndex: 0" class="target-anchor">
         <a-entity class="showroom-wrapper" position="0 0 0.3" 
-                  animation="property: rotation; to: 0 360 0; dur: 8000; easing: linear; loop: true">
+                  animation="property: rotation; to: 0 0 360; dur: 8000; easing: linear; loop: true">
           
           <a-gltf-model class="white-model" src="#white-asset" scale="0.1 0.1 0.1" visible="true"></a-gltf-model>
           <a-gltf-model class="pink-model" src="#pink-asset" scale="0.1 0.1 0.1" visible="false"></a-gltf-model>
@@ -70,7 +70,7 @@
 
       <a-entity mindar-image-target="targetIndex: 1" class="target-anchor">
         <a-entity class="showroom-wrapper" position="0 0 0.3" 
-                  animation="property: rotation; to: 0 360 0; dur: 8000; easing: linear; loop: true">
+                  animation="property: rotation; to: 0 0 360; dur: 8000; easing: linear; loop: true">
           
           <a-gltf-model class="white-model" src="#white-asset" scale="0.1 0.1 0.1" visible="true"></a-gltf-model>
           <a-gltf-model class="pink-model" src="#pink-asset" scale="0.1 0.1 0.1" visible="false"></a-gltf-model>
@@ -109,3 +109,4 @@
     </script>
   </body>
 </html>
+
